# bizkaia_od

./: .gitignore  .gitlab-ci.yml  DATASETS.md  README.md  app.py  map.js  pyproject.toml  streamlit_app.py
data/: README.md
data/processed/: bizkaia_boundary.gpkg  bizkaibus_trajectories.gpkg
data/processed/Bizkaibus/: bizkaibus_stops.geojson  bizkaibus_stops.gpkg  bizkaibus_vehicles.geojson
data/processed/metro/: bilbao_lines.geojson
data/processed/renfe/: renfe_lines.geojson  renfe_lines.gpkg  renfe_stops.gpkg
data/raw/Observaciones/: bizkaibus_20251128_172036.gpkg  bizkaibus_20251128_172252.gpkg  bizkaibus_20251128_172506.gpkg  bizkaibus_20251128_172724.gpkg  bizkaibus_20251128_172940.gpkg  bizkaibus_20251128_173155.gpkg  bizkaibus_20251128_173411.gpkg  bizkaibus_20251128_173626.gpkg  bizkaibus_20251128_173841.gpkg  bizkaibus_20251128_174056.gpkg  bizkaibus_20251128_174311.gpkg  bizkaibus_20251128_174526.gpkg  bizkaibus_20251128_174741.gpkg  bizkaibus_20251128_174958.gpkg  (+36 more)
notebooks/: 0_get_bus.ipynb  0_get_metro.ipynb  0_get_positions.ipynb  0_get_region.ipynb  0_get_renfe.ipynb  0_query_CKAN.ipynb  1_make_tiles_bus.ipynb  99_template.ipynb  datasets.md  test_linestring.ipynb  test_read_data.ipynb
pages/: bus_active.py  bus_line.py  bus_municipality.py  realtime_all.py
public/: index.html  map.js
src/: ckan.py  config.py  filtering_menus.py  make_trajectory.py  maps.py  store_unique.py  vehicles.py
src/bizkaia_od.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/realtime/: vehicles.py
src/static/: stations.py
(+13 files in other folders)
